Feature: language packs, and imports instead of inline class names
All player-facing text - commands, arena setup and validate, match and event announcements, lobby kit,
menus, countdowns - is a lang key in plugins/CopperHeist/lang/<code>.yml (en.yml ships; messages.yml is
moved there on first run). Each player reads their own client language when language.per-player is on,
missing keys fall back to English, and roles, shop entries and the guide book can be translated per
language. Errors from the game manager and roles are returned as translatable Text instead of strings.

Fully-qualified class names used inline are replaced with imports throughout.